--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -16,3 +16,33 @@ $color-grey: #807d8d;
 $color-black: #1e142e;
 $color-white: #ffffff;
 $color-bg: #f6f4f8;
+
+// ===========================================
+// Breakpoints
+// ===========================================
+
+$screen-desktop: 1100px;
+$screen-tablet: 720px;
+$screen-phone: 719px;
+
+$desktop-container: 1020px;
+$tablet-container: 695px;
+$phone-container: 270px;
+
+@mixin media-phone {
+  @media screen and (max-width: ($screen-tablet - 1px)) {
+    @content;
+  }
+}
+
+@mixin media-tablet {
+  @media screen and (min-width: ($screen-phone + 1px)) and (max-width: ($screen-desktop - 1px)) {
+    @content;
+  }
+}
+
+@mixin media-desktop {
+  @media screen and (min-width: $screen-desktop) {
+    @content;
+  }
+}
