--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -23,7 +23,6 @@ $color-bg: #f6f4f8;
 
 $screen-desktop: 1100px;
 $screen-tablet: 720px;
-$screen-phone: 719px;
 
 $desktop-container: 1020px;
 $tablet-container: 695px;
@@ -36,7 +35,7 @@ $phone-container: 270px;
 }
 
 @mixin media-tablet {
-  @media screen and (min-width: ($screen-phone + 1px)) and (max-width: ($screen-desktop - 1px)) {
+  @media screen and (min-width: $screen-tablet) and (max-width: ($screen-desktop - 1px)) {
     @content;
   }
 }
